<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDECEC"
    android:orientation="vertical"
    tools:context="de.uni_marburg.sp21.Activity.CompaniesActivity">


    <TextView
        android:id="@+id/id"
        android:layout_width="290dp"
        android:layout_height="32dp"
        android:layout_margin="16dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/round_corner"
        android:gravity="center_horizontal"
        android:text="@string/Companies"
        android:textColor="#EDECEC"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/spinner2"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/Search"
        android:layout_width="47dp"
        android:layout_height="45dp"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="#EDECEC"
        app:layout_constraintBottom_toTopOf="@+id/recCompanyView"
        app:layout_constraintEnd_toStartOf="@+id/Filter"
        app:layout_constraintStart_toEndOf="@+id/search_text"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/ic_baseline_search_24"
        app:tint="@color/black" />

    <androidx.constraintlayout.utils.widget.ImageFilterButton
        android:id="@+id/Filter"
        android:layout_width="46dp"
        android:layout_height="43dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="#EDECEC"
        app:layout_constraintBottom_toTopOf="@+id/recCompanyView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Search"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_baseline_filter_alt_24"
        app:tint="@color/black" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recCompanyView"
        android:layout_width="409dp"
        android:layout_height="584dp"
        android:layout_marginBottom="1dp"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_text" />

    <EditText
        android:id="@+id/search_text"
        android:layout_width="301dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/round_corner"
        android:ems="10"
        android:gravity="center|start"
        android:hint="@string/Search"
        android:inputType="textPersonName"
        android:lineSpacingExtra="8sp"
        android:padding="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/recCompanyView"
        app:layout_constraintEnd_toStartOf="@+id/Search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="18dp"
        android:layout_height="24dp"
        android:background="#EDECEC"
        android:popupBackground="#EDECEC"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="61dp"
        android:layout_height="41dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="25dp"
        android:background="#EDECEC"
        android:checkMark="@drawable/lang"
        android:popupBackground="#EDECEC"
        app:layout_constraintBottom_toTopOf="@+id/Search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="60dp"
        android:layout_height="41dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="9dp"
        android:background="#EDECEC"
        app:layout_constraintBottom_toBottomOf="@+id/spinner2"
        app:layout_constraintEnd_toEndOf="@+id/spinner2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spinner2"
        app:layout_constraintTop_toTopOf="@+id/spinner2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/translateicon96" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="8dp"
        android:background="#EDECEC"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toTopOf="@+id/search_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/id"
        app:srcCompat="@drawable/ic_baseline_list_24"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="191dp"
        android:layout_height="46dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/round_corner"
        android:gravity="center|start|center_horizontal|fill_horizontal"
        android:padding="5dp"
        android:text="@string/SelectCategory"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textIsSelectable="false"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id" />


</androidx.constraintlayout.widget.ConstraintLayout>